Subject : Bug fixed - bar graph width bug done - linechart tooltip done - scroll bar visibility prop added

--- a/src/assets/scss/common/_base.scss
+++ b/src/assets/scss/common/_base.scss
@@ -1523,3 +1523,9 @@ form {
     }
   }
 }
+
+.coin-badges{
+  .white-scroll::-webkit-scrollbar-thumb, .white-scroll::-webkit-scrollbar-track{
+      background-color: $secondary;
+  }
+}
